add user search and routing

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
-.row-header{
-  margin:0px auto;
-  padding:0px auto;
-}
-
-.row-content {
+.row-content{
+  display: flex;
+  justify-content: center !important;
   margin:0px auto;
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
   min-height:400px;
 }
+
+.card {
+  height: 350px;
+  width: 250px;
+  margin: 20px 0px 20px 0px;
+}
+
+.navbar {
+  padding: 20px;
+  background-color: rgb(233, 224, 222);
+}
+
 .search {
   display: flex;
+  justify-content: center !important;
   margin: 10px 0;
 }
 
